cmake_minimum_required(VERSION 3.6)
project(RMinfantry)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        bsp/inc/BSP_CAN.h
        bsp/inc/BSP_DMA.h
        bsp/inc/BSP_GPIO.h
        bsp/inc/BSP_NVIC.h
        bsp/inc/BSP_SPI.h
        bsp/inc/BSP_TIM.h
        bsp/inc/BSP_UART.h
        bsp/src/BSP_CAN.c
        bsp/src/BSP_DMA.c
        bsp/src/BSP_GPIO.c
        bsp/src/BSP_NVIC.c
        bsp/src/BSP_SPI.c
        bsp/src/BSP_TIM.c
        bsp/src/BSP_UART.c
        core/core_cm4_simd.h
        core/core_cmFunc.h
        core/core_cmInstr.h
        core/startup_stm32f40_41xxx.s
        core/stm32f4xx.h
        core/stm32f4xx_conf.h
        core/system_stm32f4xx.c
        core/system_stm32f4xx.h
        driver/inc/Driver_Bell.h
        driver/inc/Driver_Chassis.h
        driver/inc/Driver_CloudMotor.h
        driver/inc/Driver_Control.h
        driver/inc/Driver_DBUS.h
        driver/inc/Driver_ESP8266.h
        driver/inc/Driver_FricMotor.h
        driver/inc/Driver_Judge.h
        driver/inc/Driver_mpu9250.h
        driver/inc/Driver_PokeMotor.h
        driver/inc/Driver_StatusMachine.h
        driver/inc/Driver_Steering.h
        driver/inc/Driver_SuperGyroscope.h
        driver/inc/Driver_vision.h
        driver/src/Driver_Bell.c
        driver/src/Driver_Chassis.c
        driver/src/Driver_CloudMotor.c
        driver/src/Driver_Control.c
        driver/src/Driver_DBUS.c
        driver/src/Driver_ESP8266.c
        driver/src/Driver_FricMotor.c
        driver/src/Driver_Judge.c
        driver/src/Driver_mpu9250.c
        driver/src/Driver_PokeMotor.c
        driver/src/Driver_StatusMachine.c
        driver/src/Driver_Steering.c
        driver/src/Driver_SuperGyroscope.c
        driver/src/Driver_vision.c
        lib/eMPL/custom/mpu9250dmp.c
        lib/eMPL/custom/mpu9250dmp.h
        lib/eMPL/dmpKey.h
        lib/eMPL/dmpmap.h
        lib/eMPL/inv_mpu.c
        lib/eMPL/inv_mpu.h
        lib/eMPL/inv_mpu_dmp_motion_driver.c
        lib/eMPL/inv_mpu_dmp_motion_driver.h
        lib/freertos/inc/croutine.h
        lib/freertos/inc/deprecated_definitions.h
        lib/freertos/inc/event_groups.h
        lib/freertos/inc/FreeRTOS.h
        lib/freertos/inc/FreeRTOSConfig.h
        lib/freertos/inc/list.h
        lib/freertos/inc/mpu_wrappers.h
        lib/freertos/inc/portable.h
        lib/freertos/inc/portmacro.h
        lib/freertos/inc/projdefs.h
        lib/freertos/inc/queue.h
        lib/freertos/inc/semphr.h
        lib/freertos/inc/StackMacros.h
        lib/freertos/inc/task.h
        lib/freertos/inc/timers.h
        lib/freertos/src/croutine.c
        lib/freertos/src/event_groups.c
        lib/freertos/src/heap_2.c
        lib/freertos/src/list.c
        lib/freertos/src/port.c
        lib/freertos/src/queue.c
        lib/freertos/src/tasks.c
        lib/freertos/src/timers.c
        lib/std/inc/misc.h
        lib/std/inc/stm32f4xx_adc.h
        lib/std/inc/stm32f4xx_can.h
        lib/std/inc/stm32f4xx_crc.h
        lib/std/inc/stm32f4xx_cryp.h
        lib/std/inc/stm32f4xx_dac.h
        lib/std/inc/stm32f4xx_dbgmcu.h
        lib/std/inc/stm32f4xx_dcmi.h
        lib/std/inc/stm32f4xx_dma.h
        lib/std/inc/stm32f4xx_dma2d.h
        lib/std/inc/stm32f4xx_exti.h
        lib/std/inc/stm32f4xx_flash.h
        lib/std/inc/stm32f4xx_flash_ramfunc.h
        lib/std/inc/stm32f4xx_fmc.h
        lib/std/inc/stm32f4xx_fsmc.h
        lib/std/inc/stm32f4xx_gpio.h
        lib/std/inc/stm32f4xx_hash.h
        lib/std/inc/stm32f4xx_i2c.h
        lib/std/inc/stm32f4xx_iwdg.h
        lib/std/inc/stm32f4xx_ltdc.h
        lib/std/inc/stm32f4xx_pwr.h
        lib/std/inc/stm32f4xx_rcc.h
        lib/std/inc/stm32f4xx_rng.h
        lib/std/inc/stm32f4xx_rtc.h
        lib/std/inc/stm32f4xx_sai.h
        lib/std/inc/stm32f4xx_sdio.h
        lib/std/inc/stm32f4xx_spi.h
        lib/std/inc/stm32f4xx_syscfg.h
        lib/std/inc/stm32f4xx_tim.h
        lib/std/inc/stm32f4xx_usart.h
        lib/std/inc/stm32f4xx_wwdg.h
        lib/std/src/misc.c
        lib/std/src/stm32f4xx_adc.c
        lib/std/src/stm32f4xx_can.c
        lib/std/src/stm32f4xx_crc.c
        lib/std/src/stm32f4xx_cryp.c
        lib/std/src/stm32f4xx_cryp_aes.c
        lib/std/src/stm32f4xx_cryp_des.c
        lib/std/src/stm32f4xx_cryp_tdes.c
        lib/std/src/stm32f4xx_dac.c
        lib/std/src/stm32f4xx_dbgmcu.c
        lib/std/src/stm32f4xx_dcmi.c
        lib/std/src/stm32f4xx_dma.c
        lib/std/src/stm32f4xx_dma2d.c
        lib/std/src/stm32f4xx_exti.c
        lib/std/src/stm32f4xx_flash.c
        lib/std/src/stm32f4xx_flash_ramfunc.c
        lib/std/src/stm32f4xx_fmc.c
        lib/std/src/stm32f4xx_fsmc.c
        lib/std/src/stm32f4xx_gpio.c
        lib/std/src/stm32f4xx_hash.c
        lib/std/src/stm32f4xx_hash_md5.c
        lib/std/src/stm32f4xx_hash_sha1.c
        lib/std/src/stm32f4xx_i2c.c
        lib/std/src/stm32f4xx_iwdg.c
        lib/std/src/stm32f4xx_ltdc.c
        lib/std/src/stm32f4xx_pwr.c
        lib/std/src/stm32f4xx_rcc.c
        lib/std/src/stm32f4xx_rng.c
        lib/std/src/stm32f4xx_rtc.c
        lib/std/src/stm32f4xx_sai.c
        lib/std/src/stm32f4xx_sdio.c
        lib/std/src/stm32f4xx_spi.c
        lib/std/src/stm32f4xx_syscfg.c
        lib/std/src/stm32f4xx_tim.c
        lib/std/src/stm32f4xx_usart.c
        lib/std/src/stm32f4xx_wwdg.c
        MDK/Infantry_HZW.uvguix.HZW
        MDK/Infantry_HZW.uvoptx
        MDK/Infantry_HZW.uvprojx
        MDK/JLinkSettings.ini
        oled/bsp_oled.c
        oled/bsp_oled.h
        oled/drv_gui.c
        oled/drv_gui.h
        system/sim_IIC/sim_IIC.c
        system/sim_IIC/sim_IIC.h
        system/StringDecoding/StringDecoding.c
        system/StringDecoding/StringDecoding.h
        system/SystemReset/SystemReset.c
        system/SystemReset/SystemReset.h
        task/inc/Task_Bell.h
        task/inc/Task_CANSend.h
        task/inc/Task_Control.h
        task/inc/Task_ESP8266.h
        task/inc/Task_Monitor.h
        task/inc/Task_SysInitConfig.h
        task/src/Task_Bell.c
        task/src/Task_CANSend.c
        task/src/Task_Control.c
        task/src/Task_ESP8266.c
        task/src/Task_Monitor.c
        task/src/Task_SysInitConfig.c
        user/CommonDataStructure.h
        user/Config.h
        user/Handler.h
        user/main.c
        user/main.h
        user/OSinclude.h
        user/stm32f4xx_it.c
        user/stm32f4xx_it.h
        keilkilll.bat
        README.md)

add_executable(RMinfantry ${SOURCE_FILES})